<?xml version="1.0" encoding="utf-8"?>
<layout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".PaymentFailureActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_paymentfailure"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:layout_marginStart="-50dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/payment"
                android:textColor="@color/white"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/paymentfailure">

    </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F44336"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/yourpaymenthasfailed"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/youcanretrythepayment"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tryagainBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tryagain"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="102dp"
            android:textColor="@color/white"
            app:backgroundTint="#4C61CC"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/submit_btn_bg"/>


    </LinearLayout>



</LinearLayout>
</layout>
