<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LanguageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_language"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-50dp"
                android:gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <RadioGroup
        android:id="@+id/languageRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <RadioButton
            android:id="@+id/englishRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layoutDirection="rtl"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:drawablePadding="20dp"
            android:text="@string/english"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/somaliRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layoutDirection="rtl"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:drawablePadding="20dp"
            android:text="@string/somali"
            android:textSize="14sp" />

    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="30dp"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updatelanguageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updatelanguage"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            app:backgroundTint="#4C61CC"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/submit_btn_bg"/>


    </LinearLayout>


</LinearLayout>
</layout>
