<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_medium"
                android:layout_margin="10dp"
                android:text="@string/deletepopup"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/okButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:padding="5dp"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"/>

                <TextView
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_gravity="end"
                    android:fontFamily="@font/roboto"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@color/red"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>