<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ResetPasswordActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:src="@drawable/dr_logo_with_name">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetpassword"
            android:textSize="28sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="#1C2739">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setthenewpassword"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/black"/>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="70dp"
            app:strokeColor="#ebebeb"
            app:cardBackgroundColor="@color/white"
            app:strokeWidth="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/lockicon"/>
                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="@string/newpassword"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:maxLength="18"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:fontFamily="@font/roboto"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="center"
                    android:background="@null">

                    <ImageView
                        android:id="@+id/iv_show_password_new"
                        android:src="@drawable/ic_password_off"
                        android:layout_marginRight="10dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"/>

                </EditText>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="70dp"
            app:strokeColor="#ebebeb"
            app:cardBackgroundColor="@color/white"
            app:strokeWidth="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/lockicon"/>
                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:maxLength="18"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:fontFamily="@font/roboto"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="center"
                    android:background="@null">

                </EditText>

                <ImageView
                    android:id="@+id/iv_show_password_new_confirm"
                    android:src="@drawable/ic_password_off"
                    android:layout_marginRight="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetpswdBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            app:backgroundTint="#4C61CC"
            android:fontFamily="@font/roboto_bold"
            android:background="@drawable/submit_btn_bg"/>

    </LinearLayout>
</LinearLayout>
</layout>
